--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,5 +6,13 @@
 
 body {
   margin: 0;
+  line-height: 1.6;
+  font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
+  color: var(--gray-8);
+}
+
+/* utilities */
+.section-title {
+  font-size: var(--font-size-3);
 }
