--- a/src/components/poster/poster.css
+++ b/src/components/poster/poster.css
@@ -5,8 +5,9 @@
 }
 
 .poster-overlay {
-  display: grid;
-  align-content: space-between;
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
 
   opacity: 0;
   position: absolute;
@@ -14,20 +15,87 @@
   padding: 1rem 0.5rem;
   background: linear-gradient(
     318deg,
-    rgba(239, 255, 254, 0.7) 0%,
-    rgba(191, 211, 254, 0.9) 33%,
-    rgba(129, 91, 251, 0.95) 100%
+    rgba(254, 255, 255, 0.7) 0%,
+    rgba(215, 217, 221, 0.9) 33%,
+    rgba(143, 142, 146, 0.95) 100%
   );
 }
 
 .poster-overlay button {
-  padding: 0.25rem 1rem 0 1rem;
+  padding: 0.25rem 1rem 0.15rem 1rem;
   border: var(--border-size-1) solid var(--gray-7);
   border-radius: var(--radius-round);
   background-color: transparent;
 }
 
+.poster-overlay p {
+  flex-grow: 1;
+  cursor: pointer;
+}
+
 .poster-overlay .btn-grp {
+  justify-self: flex-end;
+  flex-grow: 0;
   display: flex;
   justify-content: space-between;
+  z-index: 9;
+}
+
+/* react-modal styling */
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal-header .btn-close {
+  background: none;
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  padding-block: 1rem;
+}
+
+.modal-body iframe {
+  width: 100%;
+  height: 20rem;
+}
+
+.modal-body button {
+  padding-block: 0.25rem;
+  border-radius: var(--radius-round);
+}
+
+.modal-body .genre-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.modal-body .genre-wrapper > div {
+  padding: 0.15rem 0.5rem;
+  border-radius: var(--radius-round);
+  border: var(--border-size-1) solid var(--gray-6);
+}
+
+/* react-modal override */
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+  z-index: 99;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.ReactModal__Content {
+  max-height: 80vh;
 }
