--- a/src/components/poster/poster.css
+++ b/src/components/poster/poster.css
@@ -14,17 +14,10 @@
   padding: 1rem 0.5rem;
   background: linear-gradient(
     318deg,
-    rgba(254, 255, 255, 0.7) 0%,
-    rgba(215, 217, 221, 0.9) 33%,
-    rgba(143, 142, 146, 0.95) 100%
+    rgba(34, 34, 34, 0.95) 0%,
+    rgba(20, 20, 20, 0.95) 24%,
+    rgba(0, 0, 0, 0.95) 100%
   );
-}
-
-.poster-overlay button {
-  padding: 0.25rem 1rem 0.15rem 1rem;
-  border: var(--border-size-1) solid var(--gray-7);
-  border-radius: var(--radius-round);
-  background-color: transparent;
 }
 
 .poster-overlay p {
@@ -58,14 +51,14 @@
   padding-block: 1rem;
 }
 
+.modal-body p {
+  text-indent: 2.5rem;
+  margin-block: 1rem;
+}
+
 .modal-body iframe {
   width: 100%;
   height: 20rem;
-}
-
-.modal-body button {
-  padding-block: 0.25rem;
-  border-radius: var(--radius-round);
 }
 
 .modal-body .genre-wrapper {
@@ -77,13 +70,15 @@
 .modal-body .genre-wrapper > div {
   padding: 0.15rem 0.5rem;
   border-radius: var(--radius-round);
-  border: var(--border-size-1) solid var(--gray-6);
+  color: var(--gray-7);
+  border: var(--border-size-1) solid var(--gray-7);
 }
 
 /* react-modal override */
 .ReactModal__Overlay {
   opacity: 0;
   transition: opacity 500ms ease-in-out;
+  background: rgba(19, 19, 19, 0.76) !important;
 }
 
 .ReactModal__Overlay--after-open {
@@ -95,6 +90,9 @@
   opacity: 0;
 }
 
-.ReactModal__Content {
+.ReactModal__Content,
+.ReactModal__Content--after-open {
   max-height: 80vh;
+  background: rgb(19 19 19) !important;
+  border: none !important;
 }
