--- a/src/components/segment/segment.css
+++ b/src/components/segment/segment.css
@@ -1,3 +1,36 @@
+.segment {
+  padding-inline: 0.5rem;
+}
+
 .swiper-slide {
   position: relative;
+}
+
+/* swiper breakpoints */
+.swiper-container {
+  width: 375px;
+}
+
+@media screen and (min-width: 640px) {
+  .swiper-container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .swiper-container {
+    width: 640px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .swiper-container {
+    width: 900px;
+  }
 }
