--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,10 +9,78 @@ body {
   line-height: 1.6;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--gray-8);
+  color: rgb(214, 214, 214);
+  background-color: rgb(19, 19, 19);
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3 {
+  color: rgb(214, 214, 214) !important;
+}
+
+button {
+  font-size: 16px;
 }
 
 /* utilities */
 .section-title {
   font-size: var(--font-size-3);
+}
+
+/* components */
+.btn {
+  padding: 0.25rem 1rem;
+}
+
+.btn-round-primary,
+.btn-outline-primary,
+.btn-round-danger,
+.btn-outline-danger {
+  color: var(--gray-0);
+  border-radius: var(--radius-3);
+}
+
+.btn-round-primary {
+  background-color: var(--indigo-5);
+}
+
+.btn-outline-primary {
+  color: var(--indigo-5);
+  border: 1px solid var(--indigo-5);
+  background-color: transparent;
+}
+
+.btn-round-primary:hover {
+  background-color: var(--indigo-6);
+}
+
+.btn-outline-primary:hover {
+  color: var(--gray-0);
+  border: none;
+  background-color: var(--indigo-5);
+}
+
+.btn-round-danger {
+  background-color: var(--red-6);
+}
+
+.btn-outline-danger {
+  color: var(--red-7);
+  border: 1px solid var(--red-7);
+  background-color: transparent;
+}
+
+.btn-round-danger:hover {
+  background-color: var(--red-7);
+}
+
+.btn-outline-danger:hover {
+  color: var(--gray-0);
+  border: none;
+  background-color: var(--red-7);
 }
