--- a/src/components/poster/poster.css
+++ b/src/components/poster/poster.css
@@ -1,3 +1,7 @@
+.poster {
+  position: relative;
+}
+
 .poster:hover .poster-overlay {
   animation: var(--animation-fade-in) forwards, var(--animation-slide-in-down);
   animation-duration: 250ms;
@@ -52,8 +56,7 @@
 }
 
 .modal-body p {
-  text-indent: 2.5rem;
-  margin-block: 1rem;
+  margin-block-start: 2rem;
 }
 
 .modal-body iframe {
@@ -78,7 +81,7 @@
 .ReactModal__Overlay {
   opacity: 0;
   transition: opacity 500ms ease-in-out;
-  background: rgba(19, 19, 19, 0.76) !important;
+  background: rgba(19, 19, 19, 0.8) !important;
 }
 
 .ReactModal__Overlay--after-open {
@@ -95,4 +98,14 @@
   max-height: 80vh;
   background: rgb(19 19 19) !important;
   border: none !important;
+}
+
+/* custom scrollbar */
+.ReactModal__Content::-webkit-scrollbar {
+  width: 0.25em;
+}
+
+.ReactModal__Content::-webkit-scrollbar-thumb {
+  border-radius: var(--radius-round);
+  background: var(--gray-6);
 }
