--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,7 +1,42 @@
 .banner {
-  height: min(30rem, 90vw);
-  margin-block-start: -4rem;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
+  display: grid;
+  grid-template-columns: 3rem 1fr 13rem;
+  grid-template-rows: 1fr 1fr 3rem;
+}
+
+.shadow {
+  grid-area: 1 / 1 / 4 / 4;
+  box-shadow: 0px -40px 20px -10px rgba(19, 19, 19, 1) inset;
+}
+
+.banner img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.banner-img {
+  grid-area: 1 / 1 / 4 / 4;
+}
+
+.banner-info {
+  grid-area: 2 / 1 / 3 / 4;
+  z-index: 2;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  background-color: rgba(19, 19, 19, 0.7);
+  padding: 1rem;
+}
+
+.banner-info > .btn-grp {
+  display: flex;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .banner-info {
+    grid-area: 2 / 2 / 3 / 3;
+  }
 }
